# raytracer-c

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.h  common.h  hittable.h  hittable_list.h  main.c  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
